@@ -1,3 +1,7 @@
+2005-05-13  Yann Hodique  <Yann.Hodique@lifl.fr>
+
+	* perso/psvn.el: updated to latest version (after my changes were incorporated)
+
 2005-05-12  Yann Hodique  <Yann.Hodique@lifl.fr>
 
 	* perso/psvn.el: updated to latest version from xsteve
